// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerBar > (Snapshot) active states render 1`] = `
<DocumentFragment>
  <footer
    class="bg-background border-border flex h-16 items-center border-t-2 px-4"
  >
    <div
      class="grid w-full grid-cols-[minmax(0,1fr)_auto_minmax(0,1fr)] items-center gap-4"
    >
      <div
        class="min-w-0"
      >
        <div
          class="flex min-w-0 items-center gap-3"
        >
          <div
            class="border-border bg-background-secondary size-12 shrink-0 overflow-hidden rounded border-2"
          >
            <img
              alt=""
              class="size-full object-cover"
              src="https://picsum.photos/48"
            />
          </div>
          <div
            class="min-w-0"
          >
            <div
              class="text-foreground truncate text-sm font-bold"
            >
              Crystalized
            </div>
            <div
              class="text-foreground-secondary truncate text-xs"
            >
              XX
            </div>
          </div>
        </div>
      </div>
      <div
        class="justify-self-center"
      >
        <div
          class="flex items-center justify-center gap-2"
        >
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-shuffle"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 18h1.4c1.3 0 2.5-.6 3.3-1.7l6.1-8.6c.7-1.1 2-1.7 3.3-1.7H22"
              />
              <path
                d="m18 2 4 4-4 4"
              />
              <path
                d="M2 6h1.9c1.5 0 2.9.9 3.6 2.2"
              />
              <path
                d="M22 18h-5.9c-1.3 0-2.6-.7-3.3-1.8l-.5-.8"
              />
              <path
                d="m18 14 4 4-4 4"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-skip-back"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="19 20 9 12 19 4 19 20"
              />
              <line
                x1="5"
                x2="5"
                y1="19"
                y2="5"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-pause"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="16"
                rx="1"
                width="4"
                x="14"
                y="4"
              />
              <rect
                height="16"
                rx="1"
                width="4"
                x="6"
                y="4"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-skip-forward"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="5 4 15 12 5 20 5 4"
              />
              <line
                x1="19"
                x2="19"
                y1="5"
                y2="19"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-repeat"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m17 2 4 4-4 4"
              />
              <path
                d="M3 11v-1a4 4 0 0 1 4-4h14"
              />
              <path
                d="m7 22-4-4 4-4"
              />
              <path
                d="M21 13v1a4 4 0 0 1-4 4H3"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="justify-self-end"
      >
        <div
          class="flex items-center gap-2"
        >
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-volume2"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <div
            class="w-24"
          >
            <div
              class="flex w-full flex-col gap-2"
            >
              <div
                class="relative h-6 w-full overscroll-contain"
              >
                <div
                  class="pointer-events-none absolute inset-x-0 top-1/2 -translate-y-1/2"
                >
                  <div
                    class="border-border bg-background-input relative h-3 w-full rounded border-2"
                  >
                    <div
                      class="bg-primary absolute top-0 left-0 h-full rounded-l"
                      style="width: 60%;"
                    />
                    <div
                      class="border-border absolute top-1/2 -ml-2 h-5 w-5 -translate-y-1/2 rounded-full border-2 bg-white"
                      style="left: 60%;"
                    />
                  </div>
                </div>
                <input
                  aria-labelledby=":r1:-label"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="60"
                  aria-valuetext="60"
                  class="absolute inset-0 z-[1] h-6 w-full appearance-none opacity-0 cursor-pointer"
                  id=":r1:"
                  max="100"
                  min="0"
                  step="1"
                  type="range"
                  value="60"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`PlayerBar > (Snapshot) default render 1`] = `
<DocumentFragment>
  <footer
    class="bg-background border-border flex h-16 items-center border-t-2 px-4"
  >
    <div
      class="grid w-full grid-cols-[minmax(0,1fr)_auto_minmax(0,1fr)] items-center gap-4"
    >
      <div
        class="min-w-0"
      >
        <div
          class="flex min-w-0 items-center gap-3"
        >
          <div
            class="border-border bg-background-secondary size-12 shrink-0 overflow-hidden rounded border-2"
          >
            <img
              alt=""
              class="size-full object-cover"
              src="https://picsum.photos/48"
            />
          </div>
          <div
            class="min-w-0"
          >
            <div
              class="text-foreground truncate text-sm font-bold"
            >
              Song Title
            </div>
            <div
              class="text-foreground-secondary truncate text-xs"
            >
              Artist Name
            </div>
          </div>
        </div>
      </div>
      <div
        class="justify-self-center"
      >
        <div
          class="flex items-center justify-center gap-2"
        >
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-shuffle"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 18h1.4c1.3 0 2.5-.6 3.3-1.7l6.1-8.6c.7-1.1 2-1.7 3.3-1.7H22"
              />
              <path
                d="m18 2 4 4-4 4"
              />
              <path
                d="M2 6h1.9c1.5 0 2.9.9 3.6 2.2"
              />
              <path
                d="M22 18h-5.9c-1.3 0-2.6-.7-3.3-1.8l-.5-.8"
              />
              <path
                d="m18 14 4 4-4 4"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-skip-back"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="19 20 9 12 19 4 19 20"
              />
              <line
                x1="5"
                x2="5"
                y1="19"
                y2="5"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-play"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="6 3 20 12 6 21 6 3"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-skip-forward"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="5 4 15 12 5 20 5 4"
              />
              <line
                x1="19"
                x2="19"
                y1="5"
                y2="19"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-repeat"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m17 2 4 4-4 4"
              />
              <path
                d="M3 11v-1a4 4 0 0 1 4-4h14"
              />
              <path
                d="m7 22-4-4 4-4"
              />
              <path
                d="M21 13v1a4 4 0 0 1-4 4H3"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="justify-self-end"
      >
        <div
          class="flex items-center gap-2"
        >
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-volume2"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <div
            class="w-24"
          >
            <div
              class="flex w-full flex-col gap-2"
            >
              <div
                class="relative h-6 w-full overscroll-contain"
              >
                <div
                  class="pointer-events-none absolute inset-x-0 top-1/2 -translate-y-1/2"
                >
                  <div
                    class="border-border bg-background-input relative h-3 w-full rounded border-2"
                  >
                    <div
                      class="bg-primary absolute top-0 left-0 h-full rounded-l"
                      style="width: 75%;"
                    />
                    <div
                      class="border-border absolute top-1/2 -ml-2 h-5 w-5 -translate-y-1/2 rounded-full border-2 bg-white"
                      style="left: 75%;"
                    />
                  </div>
                </div>
                <input
                  aria-labelledby=":r0:-label"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="75"
                  aria-valuetext="75"
                  class="absolute inset-0 z-[1] h-6 w-full appearance-none opacity-0 cursor-pointer"
                  id=":r0:"
                  max="100"
                  min="0"
                  step="1"
                  type="range"
                  value="75"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`PlayerBar > (Snapshot) long metadata truncation 1`] = `
<DocumentFragment>
  <div
    style="width: 420px;"
  >
    <footer
      class="bg-background border-border flex h-16 items-center border-t-2 px-4"
    >
      <div
        class="grid w-full grid-cols-[minmax(0,1fr)_auto_minmax(0,1fr)] items-center gap-4"
      >
        <div
          class="min-w-0"
        >
          <div
            class="flex min-w-0 items-center gap-3"
          >
            <div
              class="border-border bg-background-secondary size-12 shrink-0 overflow-hidden rounded border-2"
            >
              <img
                alt=""
                class="size-full object-cover"
                src="https://picsum.photos/48"
              />
            </div>
            <div
              class="min-w-0"
            >
              <div
                class="text-foreground truncate text-sm font-bold"
              >
                An Incredibly, Ridiculously Long Song Title That Should Truncate Nicely
              </div>
              <div
                class="text-foreground-secondary truncate text-xs"
              >
                A Very Long Artist Name Featuring Another Long Artist With Even More Characters
              </div>
            </div>
          </div>
        </div>
        <div
          class="justify-self-center"
        >
          <div
            class="flex items-center justify-center gap-2"
          >
            <button
              class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
              data-headlessui-state=""
              type="submit"
            >
              <svg
                class="lucide lucide-shuffle"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 18h1.4c1.3 0 2.5-.6 3.3-1.7l6.1-8.6c.7-1.1 2-1.7 3.3-1.7H22"
                />
                <path
                  d="m18 2 4 4-4 4"
                />
                <path
                  d="M2 6h1.9c1.5 0 2.9.9 3.6 2.2"
                />
                <path
                  d="M22 18h-5.9c-1.3 0-2.6-.7-3.3-1.8l-.5-.8"
                />
                <path
                  d="m18 14 4 4-4 4"
                />
              </svg>
            </button>
            <button
              class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
              data-headlessui-state=""
              type="submit"
            >
              <svg
                class="lucide lucide-skip-back"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="19 20 9 12 19 4 19 20"
                />
                <line
                  x1="5"
                  x2="5"
                  y1="19"
                  y2="5"
                />
              </svg>
            </button>
            <button
              class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none size-10 justify-center"
              data-headlessui-state=""
              type="submit"
            >
              <svg
                class="lucide lucide-play"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="6 3 20 12 6 21 6 3"
                />
              </svg>
            </button>
            <button
              class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
              data-headlessui-state=""
              type="submit"
            >
              <svg
                class="lucide lucide-skip-forward"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="5 4 15 12 5 20 5 4"
                />
                <line
                  x1="19"
                  x2="19"
                  y1="5"
                  y2="19"
                />
              </svg>
            </button>
            <button
              class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
              data-headlessui-state=""
              type="submit"
            >
              <svg
                class="lucide lucide-repeat"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m17 2 4 4-4 4"
                />
                <path
                  d="M3 11v-1a4 4 0 0 1 4-4h14"
                />
                <path
                  d="m7 22-4-4 4-4"
                />
                <path
                  d="M21 13v1a4 4 0 0 1-4 4H3"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="justify-self-end"
        >
          <div
            class="flex items-center gap-2"
          >
            <button
              class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
              data-headlessui-state=""
              type="submit"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </button>
            <div
              class="w-24"
            >
              <div
                class="flex w-full flex-col gap-2"
              >
                <div
                  class="relative h-6 w-full overscroll-contain"
                >
                  <div
                    class="pointer-events-none absolute inset-x-0 top-1/2 -translate-y-1/2"
                  >
                    <div
                      class="border-border bg-background-input relative h-3 w-full rounded border-2"
                    >
                      <div
                        class="bg-primary absolute top-0 left-0 h-full rounded-l"
                        style="width: 50%;"
                      />
                      <div
                        class="border-border absolute top-1/2 -ml-2 h-5 w-5 -translate-y-1/2 rounded-full border-2 bg-white"
                        style="left: 50%;"
                      />
                    </div>
                  </div>
                  <input
                    aria-labelledby=":r2:-label"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="50"
                    aria-valuetext="50"
                    class="absolute inset-0 z-[1] h-6 w-full appearance-none opacity-0 cursor-pointer"
                    id=":r2:"
                    max="100"
                    min="0"
                    step="1"
                    type="range"
                    value="50"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`PlayerBar > (Snapshot) no artwork fallback 1`] = `
<DocumentFragment>
  <footer
    class="bg-background border-border flex h-16 items-center border-t-2 px-4"
  >
    <div
      class="grid w-full grid-cols-[minmax(0,1fr)_auto_minmax(0,1fr)] items-center gap-4"
    >
      <div
        class="min-w-0"
      >
        <div
          class="flex min-w-0 items-center gap-3"
        >
          <div
            class="border-border bg-background-secondary size-12 shrink-0 overflow-hidden rounded border-2"
          >
            <div
              class="text-foreground-secondary flex size-full items-center justify-center"
            >
              <svg
                class="lucide lucide-music2"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="18"
                  r="4"
                />
                <path
                  d="M12 18V2l7 4"
                />
              </svg>
            </div>
          </div>
          <div
            class="min-w-0"
          >
            <div
              class="text-foreground truncate text-sm font-bold"
            >
              Untitled Track
            </div>
            <div
              class="text-foreground-secondary truncate text-xs"
            >
              Unknown Artist
            </div>
          </div>
        </div>
      </div>
      <div
        class="justify-self-center"
      >
        <div
          class="flex items-center justify-center gap-2"
        >
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-shuffle"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 18h1.4c1.3 0 2.5-.6 3.3-1.7l6.1-8.6c.7-1.1 2-1.7 3.3-1.7H22"
              />
              <path
                d="m18 2 4 4-4 4"
              />
              <path
                d="M2 6h1.9c1.5 0 2.9.9 3.6 2.2"
              />
              <path
                d="M22 18h-5.9c-1.3 0-2.6-.7-3.3-1.8l-.5-.8"
              />
              <path
                d="m18 14 4 4-4 4"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-skip-back"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="19 20 9 12 19 4 19 20"
              />
              <line
                x1="5"
                x2="5"
                y1="19"
                y2="5"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-play"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="6 3 20 12 6 21 6 3"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-skip-forward"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="5 4 15 12 5 20 5 4"
              />
              <line
                x1="19"
                x2="19"
                y1="5"
                y2="19"
              />
            </svg>
          </button>
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-repeat"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m17 2 4 4-4 4"
              />
              <path
                d="M3 11v-1a4 4 0 0 1 4-4h14"
              />
              <path
                d="m7 22-4-4 4-4"
              />
              <path
                d="M21 13v1a4 4 0 0 1-4 4H3"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="justify-self-end"
      >
        <div
          class="flex items-center gap-2"
        >
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent size-10 justify-center"
            data-headlessui-state=""
            type="submit"
          >
            <svg
              class="lucide lucide-volume2"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <div
            class="w-24"
          >
            <div
              class="flex w-full flex-col gap-2"
            >
              <div
                class="relative h-6 w-full overscroll-contain"
              >
                <div
                  class="pointer-events-none absolute inset-x-0 top-1/2 -translate-y-1/2"
                >
                  <div
                    class="border-border bg-background-input relative h-3 w-full rounded border-2"
                  >
                    <div
                      class="bg-primary absolute top-0 left-0 h-full rounded-l"
                      style="width: 30%;"
                    />
                    <div
                      class="border-border absolute top-1/2 -ml-2 h-5 w-5 -translate-y-1/2 rounded-full border-2 bg-white"
                      style="left: 30%;"
                    />
                  </div>
                </div>
                <input
                  aria-labelledby=":r3:-label"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="30"
                  aria-valuetext="30"
                  class="absolute inset-0 z-[1] h-6 w-full appearance-none opacity-0 cursor-pointer"
                  id=":r3:"
                  max="100"
                  min="0"
                  step="1"
                  type="range"
                  value="30"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
